@@ -4,6 +4,7 @@ date Version 3.00.46 (Beta 3)
 + Added "column_sizes" and "row_sizes" properties to wxGrid.
   Resizing the columns/rows by dragging is the easiest way to use these.
 + Added events to wxStdDialogButtonSizer.
++ Added wxAuiNotebook.
 ^ Reorganized wxGrid properties.
 * Fixed FS#199 - "tooltips lost on XRC import"
 * Fixed import of "enabled", "hidden", and "subclass" properties.
